--- a/resources/views/templates/patterns/navigation.twig
+++ b/resources/views/templates/patterns/navigation.twig
@@ -1,4 +1,4 @@
 <nav class="nav">
     <a class="nav-link" href="/public/">Home</a>
-    <a class="nav-link" href="/public/project">Projects</a>
 </nav>
+<h3>Nothing interesting.</h3>
